<resources>
    <string name="app_name">Rehapp</string>
    <string name="done">Done</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="healthDetails">Health Details</string>
    <string name="medicalID">Medical ID</string>
    <string name="nightMode">Night Mode</string>
    <string name="features">Features</string>

    <string name="summary">Summary</string>
    <string name="dailyActivities">Daily Activities</string>
    <string name="steps">Steps</string>
    <string name="balls">Ball Activities</string>
    <string name="awards">Awards</string>

    <string name="ballGame">Ball Game</string>
    <string name="stepGame">Step-it-Up Game</string>

    <!--  user features' buttons  -->
    <string name="awardsButton">Awards ✨</string>

    <!--  menu string values  -->
    <string name="menu_home">Summary</string>
    <string name="menu_user">User</string>

    <!--  awards page string values  -->
    <string name="pointsHeading">Your Points:</string>
    <string name="availableButton">Available</string>
    <string name="redeemedButton">Redeemed</string>

    <string name="voucher15">$15</string>
    <string name="voucher10">$10</string>
    <string name="voucher5">$5</string>

    <string name="qrInstructions">
        Please scan QR code to redeem.
    </string>

    <string name="redeemButton">Redeemed!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="sex">
        <item>Female</item>
        <item>Male</item>
        <item>Others</item>
    </string-array>
    <string-array name="bloodType">
        <item>O</item>
        <item>A</item>
        <item>B</item>
        <item>AB</item>
    </string-array>
</resources>