<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="206dp"
        android:layout_height="94dp"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />


    <EditText
        android:id="@+id/username"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="96dp"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        android:gravity="top|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="165dp"
            android:layout_height="50dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="#E4D0C4"
            android:onClick="loginBtnClick"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#576A8A"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="165dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="#E4D0C4"
            android:onClick="registerBtnClick"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="#576A8A"
            android:textSize="16sp"

            />
    </LinearLayout>


</LinearLayout>