<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AwardsActivity">

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:onClick="returnToPrev"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/pointsHeading"
        android:textAlignment="center"
        android:textColor="@color/ocean"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="[Points]"
        android:textAlignment="center"
        android:textColor="@color/ocean"
        android:textSize="38sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
        android:id="@+id/navButtons">

        <Button
            android:id="@+id/availableBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/pill_shape"
            android:text="@string/availableButton"
            android:textColor="@color/lightBrown"
            android:textSize="12sp"
            android:textStyle="bold"
            android:onClick="showAvailable"/>

        <Button
            android:id="@+id/redeemedBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/pill_shape"
            android:text="@string/redeemedButton"
            android:textColor="@color/lightBrown"
            android:textSize="12sp"
            android:textStyle="bold"
            android:onClick="showRedeemed"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>


</LinearLayout>