<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@android:color/transparent"
        android:letterSpacing="0.05"
        android:text="@string/done"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="#576A8A"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/my_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:src="@drawable/icon"
        app:civ_border_width="2dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="shya"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_corners"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:letterSpacing="0.03"
                android:text="@string/nightMode"
                android:textAlignment="textStart"
                android:textAllCaps="false"

                android:textColor="@color/cardview_dark_background"
                android:textSize="14sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/nightModeToggle"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_corners"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/healthDetailsText"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:letterSpacing="0.03"
                android:text="@string/healthDetails"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/cardview_dark_background"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/healthDetailsBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/chevron_right"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/medicalIDText"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:letterSpacing="0.03"
                android:text="@string/medicalID"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/cardview_dark_background"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/medicalIDBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/chevron_right" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp"
        android:background="@drawable/rounded_corners"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:letterSpacing="0.03"
            android:onClick="logoutBtnClick"
            android:text="@string/logout"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#576A8A"
            android:textSize="16sp"

            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="320dp" />
    </LinearLayout>

</LinearLayout>
